2009-10-08  Sam Steingold  <sds@gnu.org>

	* modules/regexp/gllib/Makefile.am, modules/regexp/gllib/stddef.in.h:
	* modules/regexp/gllib/stdlib.in.h, modules/regexp/gllib/unistd.in.h:
	* modules/regexp/glm4/unistd_h.m4, modules/syscalls/gllib/Makefile.am:
	* modules/syscalls/gllib/errno.in.h, modules/syscalls/gllib/stddef.in.h:
	* modules/syscalls/gllib/strings.in.h, modules/syscalls/gllib/uname.c:
	* modules/syscalls/gllib/sys_socket.in.h, gllib/wchar.in.h:
	* modules/syscalls/gllib/sys_utsname.in.h, gllib/wctype.in.h:
	* modules/syscalls/gllib/time.in.h, modules/syscalls/gllib/unistd.in.h:
	* modules/syscalls/glm4/unistd_h.m4
	* gllib/Makefile.am, gllib/alloca.in.h, gllib/stdbool.in.h:
	* gllib/stddef.in.h, gllib/stdint.in.h, gllib/streq.h:
	* gllib/string.in.h, gllib/sys_time.in.h, gllib/unistd.in.h:
	update from gnulib, using the gnulib-tool hack

2009-10-08  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (gnulib-imported): since Bruno refuses to apply
	my gnulib-tool patch, we have to patch gnulib-tool before importing
	* gnulib-tool.patch: add gnulib-tool hack to support multiple
	gllib directories: headers are generated for each gllib
	differently, depending on which features are actually used, so we
	need to be able to include all these generated headers without
	fear that one will shadow another, so we prepend the macro-prefix
	before the guard macros

2009-10-08  Sam Steingold  <sds@gnu.org>

	support DYNAMIC_MODULES on woe32 (native & cygwin) using dll def file
	* array.d, charstrg.d, control.d, encoding.d, error.d, errunix.d:
	* errwin32.d, eval.d, flo_konv.d, foreign.d, hashtabl.d, intelem.d:
	* intlog.d, intplus.d, intserial.d, lisparit.d, list.d, misc.d:
	* package.d, pathname.d, predtype.d, sequence.d, socket.d, spvw.d:
	* spvw_allocate.d, spvw_debug.d, spvw_fault.d, spvw_global.d:
	* spvw_language.d, spvw_module.d, spvw_sigcld.d, spvw_sigpipe.d:
	* spvw_typealloc.d, spvwtabf.d, spvwtabo.d, spvwtabs.d, stream.d: