@@ -1,6 +1,9 @@
 ;; -*- Lisp -*- vim:filetype=lisp
 ;; some tests for WIN32
-;; clisp -K full -E 1:1 -q -norc -i ../tests/tests -x '(run-test "bindings/win32/test")'
+;; clisp -E 1:1 -q -norc -i ../tests/tests -x '(run-test "bindings/win32/test")'
+
+(require "win32") T
+(listp (show (multiple-value-list (ext:module-info "win32" t)) :pretty t)) T
 
 (defmacro show-mv (form) `(listp (show (multiple-value-list ,form) :pretty t)))
 SHOW-MV
