@@ -1,6 +1,7 @@
 ;; -*- Lisp -*- vim:filetype=lisp
 ;; clisp -E 1:1 -q -norc -i ../tests/tests -x '(run-test "regexp/test")'
 
+(require "regexp") NIL
 (listp (show (multiple-value-list (ext:module-info "regexp" t)) :pretty t)) T
 
 (let ((rc (regexp:regexp-compile "a(a)*" :extended t)))
