@@ -1,5 +1,8 @@
 ;; -*- Lisp -*- vim:filetype=lisp
-;; clisp -K full -E utf-8 -q -norc -i ../tests/tests -x '(run-test "wildcard/test")'
+;; clisp -E utf-8 -q -norc -i ../tests/tests -x '(run-test "wildcard/test")'
+
+(require "wildcard") t
+(listp (show (multiple-value-list (ext:module-info "wildcard" t)) :pretty t)) t
 
 (wildcard:match "foo" "bar") NIL
 
