@@ -1,5 +1,10 @@
 2009-10-08  Sam Steingold  <sds@gnu.org>
 
+	* makemake.in (full-mod-check): use base, not full, and require
+	the module from the test files
+
+2009-10-08  Sam Steingold  <sds@gnu.org>
+
 	* modules/regexp/gllib/Makefile.am, modules/regexp/gllib/stddef.in.h:
 	* modules/regexp/gllib/stdlib.in.h, modules/regexp/gllib/unistd.in.h:
 	* modules/regexp/glm4/unistd_h.m4, modules/syscalls/gllib/Makefile.am:
